--- a/media-dashboard-service-dev.yml
+++ b/media-dashboard-service-dev.yml
@@ -1,7 +1,7 @@
 
 spring:             
   datasource:
-    url: jdbc:mysql://localhost:3306/bookcart?useSSL=false
+    url: jdbc:mysql://localhost:3306/bookcart?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: root
   jpa:
